--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,11 @@
 ios/
 android/
 vendor/
+.eslintrc.js
+.ruby-version
+.watchmanconfig
+babel.config.js
+metro.config.js
+tsconfig.json
+yarn.lock
+prettierrc.js
