--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "react-native-animated-bottom-drawer",
-  "version": "0.0.14",
-  "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.71.2"
+  "version": "0.0.16",
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^3.2.0",
