--- a/example/package.json
+++ b/example/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.4",
-    "react-native-animated-bottom-drawer": "/Users/atharvadeolalikar/Projects/bottom-sheet"
+    "react-native": "0.71.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
